# TensorRT-LLM

./: .env  .gitignore  requirements.txt  zFUCK_gitee
benchmarks/cpp/: CMakeLists.txt
benchmarks/python/: allowed_configs.py  build.py  gpt_benchmark.py
cpp/: CMakeLists.txt
cpp/btllm/: CMakeLists.txt
cpp/btllm/btcommon/: CMakeLists.txt  bt.cpp  bt.h
cpp/btllm/kernels/: CMakeLists.txt
cpp/btllm/kernels/cutlass_kernels/: CMakeLists.txt
cpp/btllm/kernels/cutlass_kernels/btfpA_intB_gemm/: btbf16_int4_gemm_fg_scalebias.cu  btfpA_intB_gemm.h  btfpA_intB_gemm_template.h
cpp/btllm/mdl/: CMakeLists.txt
cpp/btllm/mdl/llama/: CMakeLists.txt  llama.cpp  llama.h
cpp/btllm/plugins/: CMakeLists.txt
cpp/btllm/plugins/common/: checkMacrosPlugin.cpp  checkMacrosPlugin.h  gemmPluginProfiler.cpp  gemmPluginProfiler.h  plugin.cpp  plugin.h  pluginUtils.h
cpp/btllm/plugins/gemmPlugin/: gemmPlugin.cpp  gemmPlugin.h
cpp/btllm/plugins/gptAttentionPlugin/: btGptAttentionPlugin.cpp  btGptAttentionPlugin.h
cpp/btllm/plugins/lookupPlugin/: CMakeLists.txt  lookupPlugin.cpp  lookupPlugin.h  lookupRmsKernels.cu
cpp/btllm/plugins/weightOnlyGroupwiseQuantMatmulPlugin/: btweightOnlyGroupwiseQuantMatmulPlugin.cpp  btweightOnlyGroupwiseQuantMatmulPlugin.h
cpp/btllm/py/tst/: BTTest_gemmWeightOnlyGrpwisBf16W8.py  BTtest_llama.py  BTtest_llama_tmp.py  BTtest_llama_tmpLL.py  benchmarkGL.py  path_util.py  pybind.py  test_embedding_rms.py  test_llamaLL_tmpGL.py  test_llama_tmpGL.py  test_residual_rms.py
cpp/btllm/pybind/: CMakeLists.txt  bindings.cpp  llamabind.cpp  pybind_layer.cpp
cpp/include/tensorrt_llm/common/: cudaFp8Utils.h
cpp/include/tensorrt_llm/runtime/: iBuffer.h
cpp/tensorrt_llm/common/: cudaFp8Utils.cu  cudaFp8Utils.h
cpp/tensorrt_llm/cutlass_extensions/include/cutlass_extensions/: epilogue_helpers.h
cpp/tensorrt_llm/cutlass_extensions/include/cutlass_extensions/arch/: mma.h
cpp/tensorrt_llm/cutlass_extensions/include/cutlass_extensions/gemm/kernel/: default_fpA_intB_traits.h  fpA_intB_gemm.h  mixed_gemm_B_layout.h
cpp/tensorrt_llm/cutlass_extensions/include/cutlass_extensions/gemm/threadblock/: default_dq_mma_multistage.h  default_mma_bf16.h  dq_mma_multistage_finegrained.h
cpp/tensorrt_llm/cutlass_extensions/include/cutlass_extensions/gemm/warp/: default_mma_tensor_op.h  mma_tensorop_compute_B_with_f16.h  mma_tensorop_dequantizer.h
cpp/tensorrt_llm/kernels/: CMakeLists.txt  decoderMaskedMultiheadAttentionUtils.h  lookupGLRmsKernels.cu  lookupGLRmsKernels.h  preQuantScaleKernel.cu
cpp/tensorrt_llm/kernels/cutlass_kernels/: CMakeLists.txt  cutlass_heuristic.cpp
cpp/tensorrt_llm/kernels/cutlass_kernels/fpA_intB_gemm/: fpA_intB_gemm_template.h
cpp/tensorrt_llm/kernels/decoderMaskedMultiheadAttention/: decoderMaskedMultiheadAttentionTemplate.h
cpp/tensorrt_llm/plugins/: CMakeLists.txt
cpp/tensorrt_llm/plugins/api/: tllmPlugin.cpp
cpp/tensorrt_llm/plugins/common/: gemmPluginProfiler.h
cpp/tensorrt_llm/plugins/gptAttentionCommon/: gptAttentionCommon.cpp
cpp/tensorrt_llm/plugins/gptAttentionPlugin/: gptAttentionPlugin.cpp  gptAttentionPlugin.h
cpp/tensorrt_llm/plugins/lookupGLPlugin/: lookupGLPlugin.cpp  lookupGLPlugin.h
cpp/tensorrt_llm/plugins/rmsResidGLPlugin/: rmsResidGLPlugin.cpp  rmsResidGLPlugin.h
cpp/tensorrt_llm/plugins/weightOnlyGroupwiseQuantMatmulPlugin/: weightOnlyGroupwiseQuantMatmulPlugin.cpp
cpp/tensorrt_llm/runtime/: iBuffer.cpp
cpp/tensorrt_llm/thop/: CMakeLists.txt
cpp/tests/: CMakeLists.txt
cpp/tests/kernels/weightOnly/: weightOnlyKernelTest.cpp
examples/cpp/executor/: CMakeLists.txt
scripts/: build_wheel.py  build_wheel_old.py
tensorrt_llm/: functional.py  functionalGL.py
tensorrt_llm/layers/: attention.py  embedding.py
tensorrt_llm/models/: __init__.py  generation_mixin.py
tensorrt_llm/models/llama/: model.py
tensorrt_llm/models/llamaLL/: config.py  convert.py  model.py  weight.py
tensorrt_llm/plugin/: plugin.py
tensorrt_llm/quantization/: functional.py
tensorrt_llm/runtime/: generation.py
tests/model/: BTtest_llama.py  test_llama.py  test_llamaGL.py  test_llamaLL.py
tests/quantization/: BTtest_weight_only_groupwise_quant_matmul.py  _utils.py
